--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
 # Dependencies
 node_modules/
+farmsense-code/frontend/admin-dashboard/node_modules/
+farmsense-code/frontend/farmer-dashboard/node_modules/
+farmsense-code/frontend/grant-portal/node_modules/
+farmsense-code/frontend/investor-dashboard/node_modules/
+farmsense-code/frontend/regulatory-portal/node_modules/
+farmsense-code/frontend/research-portal/node_modules/
+**/node_modules/
 dist/
 build/
 
