--- a/farmsense-code/docker-compose.yml
+++ b/farmsense-code/docker-compose.yml
@@ -1,4 +1,3 @@
-
 version: '3.8'
 
 services:
@@ -14,7 +13,7 @@ services:
 
   backend:
     build:
-      context: ./farmsense-code/backend
+      context: ./backend
       dockerfile: Dockerfile
     environment:
       DATABASE_URL: postgresql://postgres:demo-password@db:5432/farmsense
@@ -25,60 +24,60 @@ services:
 
   ml:
     build:
-      context: ./farmsense-code/cloud-processing/ml
-      dockerfile: Dockerfile # Assumes a standard FastAPI Dockerfile
+      context: ./cloud-processing/ml
+      dockerfile: Dockerfile
     ports:
       - "8001:8001"
     depends_on:
       - backend
 
+  nginx:
+    image: nginx:alpine
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - farmer-dashboard
+      - admin-dashboard
+      - regulatory-portal
+      - research-portal
+      - investor-dashboard
+      - grant-portal
+      - marketing-site
+      - docs-portal
+
   farmer-dashboard:
     build:
-      context: ./farmsense-code/frontend/farmer-dashboard
-    ports:
-      - "3000:3000"
-    environment:
-      - VITE_API_URL=http://localhost:8000/api/v1
+      context: ./frontend/farmer-dashboard
 
   admin-dashboard:
     build:
-      context: ./farmsense-code/frontend/admin-dashboard
-    ports:
-      - "3001:3000"
-    environment:
-      - VITE_API_URL=http://localhost:8000/api/v1
+      context: ./frontend/admin-dashboard
 
   regulatory-portal:
     build:
-      context: ./farmsense-code/frontend/regulatory-portal
-    ports:
-      - "3002:3000"
-    environment:
-      - VITE_API_URL=http://localhost:8000/api/v1
+      context: ./frontend/regulatory-portal
 
   research-portal:
     build:
-      context: ./farmsense-code/frontend/research-portal
-    ports:
-      - "3003:3000"
-    environment:
-      - VITE_API_URL=http://localhost:8000/api/v1
+      context: ./frontend/research-portal
 
   investor-dashboard:
     build:
-      context: ./farmsense-code/frontend/investor-dashboard
-    ports:
-      - "3004:3000"
-    environment:
-      - VITE_API_URL=http://localhost:8000/api/v1
+      context: ./frontend/investor-dashboard
 
   grant-portal:
     build:
-      context: ./farmsense-code/frontend/grant-portal
-    ports:
-      - "3005:3000"
-    environment:
-      - VITE_API_URL=http://localhost:8000/api/v1
+      context: ./frontend/grant-portal
+
+  marketing-site:
+    build:
+      context: ./frontend/marketing-site
+
+  docs-portal:
+    build:
+      context: ./frontend/docs-portal
 
 volumes:
   postgres_data:
