refactor: Update branding to FarmSense, remove dedicated ML infrastructure, and refine documentation.

--- a/farmsense-code/frontend/regulatory-portal/tsconfig.json
+++ b/farmsense-code/frontend/regulatory-portal/tsconfig.json
@@ -17,7 +17,7 @@
         "jsx": "react-jsx",
         "strict": true,
         "unusedLocals": true,
-        "unusedParameters": true,
+        "noUnusedParameters": true,
         "noFallthroughCasesInSwitch": true
     },
     "include": [
