feat: Migrate from proprietary APIs (Twilio, Mapbox, AWS S3, Sentinel/Landsat) to open-source alternatives (ntfy.sh, MapLibre, local storage, STAC APIs) and enable deterministic engine.

--- a/farmsense-code/.env.example
+++ b/farmsense-code/.env.example
@@ -8,10 +8,15 @@ TIMESCALE_PASSWORD=timescale_secure_password_2026
 # Message Queue
 RABBITMQ_PASSWORD=rabbit_secure_password_2026
 
-# API Keys (Register at respective services)
-SENTINEL_API_KEY=your_copernicus_scihub_key
-LANDSAT_API_KEY=your_usgs_earthexplorer_key
-MAPBOX_TOKEN=your_mapbox_access_token
+# API Keys & Data Sources (Open Source / No-Auth)
+# We use open STAC APIs (e.g., Microsoft Planetary Computer / AWS Open Data) which do not require keys for public bands.
+SENTINEL_API_KEY=not_required_for_stac
+LANDSAT_API_KEY=not_required_for_stac
+
+# Maps (Self-Hosted)
+# Transitioned from Mapbox to MapLibre + Self-Hosted PostGIS Tile Server (map-service)
+# No proprietary MAPBOX_TOKEN required anymore.
+MAP_SERVER_URL=http://localhost:8001
 
 # Security
 SECRET_KEY=your_jwt_secret_key_min_32_characters_long
@@ -27,18 +32,21 @@ SMTP_PORT=587
 SMTP_USER=your_email@gmail.com
 SMTP_PASSWORD=your_app_password
 
-# SMS (for critical alerts - Twilio)
-TWILIO_ACCOUNT_SID=your_twilio_sid
-TWILIO_AUTH_TOKEN=your_twilio_token
-TWILIO_PHONE_NUMBER=+1234567890
+# Communications (Webhooks/Push)
+# Replacing proprietary Twilio SMS with Open Source 'ntfy.sh' or Matrix Webhooks
+NTFY_TOPIC=farmsense_critical_alerts
+# TWILIO_ACCOUNT_SID=legacy_deprecated
+# TWILIO_AUTH_TOKEN=legacy_deprecated
+# TWILIO_PHONE_NUMBER=legacy_deprecated
 
-# AWS (for production deployment)
-AWS_ACCESS_KEY_ID=your_aws_key
-AWS_SECRET_ACCESS_KEY=your_aws_secret
-AWS_REGION=us-west-2
-S3_BUCKET_NAME=farmsense-satellite-data
+# Cloud Storage (Self-Hosted)
+# Replacing AWS S3 with local Zo.computer volumes or self-hosted MinIO (S3-compatible)
+STORAGE_BACKEND=local
+# AWS_ACCESS_KEY_ID=legacy_deprecated
+# AWS_SECRET_ACCESS_KEY=legacy_deprecated
+# S3_BUCKET_NAME=legacy_deprecated
 
 # Feature Flags
 ENABLE_REAL_TIME_ALERTS=true
-ENABLE_ML_PREDICTIONS=true
+ENABLE_DETERMINISTIC_ENGINE=true  # Replacing legacy "ML" flags to reflect audited deterministic logic
 ENABLE_SATELLITE_PROCESSING=true
